       places dividing 6
   16- contfraceval([[],[]],1) -> SEGV
   17- agm(1.0, 1.0*I + x + O(x^200)) -> oo loop [#1654]
   18- primepi(2750160) -> crash [#1855]
   19- polinterpolate([],[],Mod(1,3)) => 0 instead of Mod(0,3)
   20- subst(Pol(0),x,Mod(1,3)) => 0 instead of Mod(0,3)
   21- subst(Pol(1),x,Mod(1,3)) => 1 instead of Mod(1,3)

  Added
    1- permtonum: allow t_VECSMALL input
    2- [libpari] Z_to_perm, perm_to_Z
    3- [libpari] checkprid_i, is_nf_factor, is_nf_extfactor
    4- extend ellissupersingular for E/nf
    5- added a tag Obsolete: to the RFC822 description system (pari.desc)
    6- new GP functions nfmodpr, nfmodprlift
    7- [libpari] get_arith_Z, get_arith_ZZM
    8- [libpari] Mod2, Mod4, Mod8, Mod16, Mod32, Mod64, umodi2n
    9- [libpari] logint, logintall
   10- [libpari] zk_inv, zkmultable_capZ, zkmultable_inv, nfC_multable_mul,
       zkC_multable_mul
   11- [libpari] Idealstarprk
   12- [libpari] ZpX_monic_factor
   13- [libpari] nf_to_Fp_coprime
   14- [libpari] idealprod
   15- [libpari] rnfcomplete, rnf_build_nfabs, bnf_build_cycgen,
       bnf_build_units, bnf_build_matalpha
   16- [libpari] rnf_zkabs
   17- [libpari] get_nf_field (black box field arithmetic over a number
       field nf), nfM_det, nfM_inv, nfM_mul, nfM_nfC_mul
   18- [libpari] bnftestprimes
   19- [libpari] upr_norm
   20- [libpari] bid_get_fact, bid_get_ind, bid_get_sarch, bid_get_sprk
   21- [libpari] qfbforms
   22- [libpari] nfroots_if_split
   23- [libpari] nfmaxord_to_nf, nfinit_basic, nfinit_complete,
       idealprimedec_kummer, nf_deg1_prime
   24- [libpari] ZNstar, znstar0, znlog0
   25- GP function znchartokronecker
   26- [libpari] ser_inv
   27- allow ellztopoint for E/Qp
BA 28- [libpari] F2x_factor_squarefree, F2xqX_factor, FlxqX_factor
BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
   30- [libpari] pr_uniformizer, prV_lcm_capZ, pr_inv, pr_inv_p
   31- [libpari] cmp_padic
   32- [libpari] ZV_snf_trunc, ZM_hnfmodall_i, ZM_hnfall_i, ZC_Z_div