@@ -183,4 +183,6 @@ x^2
 [0]~
 [0]~
 [15, [3, 1; 5, 1]]
-Total time spent: 1436
+[11]
+45
+Total time spent: 1403
