@@ -28,6 +28,9 @@ BA 14- [libpari] FqX_nbfact did not work
    19- polinterpolate([],[],Mod(1,3)) => 0 instead of Mod(0,3)
    20- subst(Pol(0),x,Mod(1,3)) => 0 instead of Mod(0,3)
    21- subst(Pol(1),x,Mod(1,3)) => 1 instead of Mod(1,3)
+   22- e=znconreyexp(idealstar(,N),) could give a result with (e,N) = 2 when
+       N = 2 (mod 4)
+
 
   Added
     1- permtonum: allow t_VECSMALL input
